force-app/main/default/objects/custom_create12__c/custom_create12__c.object-meta.xml
<CustomObject>
    <label>Custom created object12</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects12</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>