force-app/main/default/objects/custom_create12__c/fields/custom_create_12field515__c.field-meta.xml
<CustomField>
    <fullName>custom_create_12field515__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 12field515</label>
    <type>Checkbox</type>
</CustomField>