force-app/main/default/objects/custom_create12__c/fields/custom_create_12field565__c.field-meta.xml
<CustomField>
    <fullName>custom_create_12field565__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 12field565</label>
    <type>Checkbox</type>
</CustomField>